[gd_scene load_steps=91 format=2]

[ext_resource path="res://src/Actors/Bosses/SecretBoss2/Secret2AI.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/secret2.res" type="SpriteFrames" id=2]
[ext_resource path="res://src/Sounds/BOSS_DEATH.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDamage.gd" type="Script" id=4]
[ext_resource path="res://src/Effects/Textures/blue_screen.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/Intro.gd" type="Script" id=8]
[ext_resource path="res://src/Sounds/OST - SecretBoss2 - Intro.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/DialogSystem/Dialogs/Stages/Secret2_Dialogue.tres" type="Resource" id=10]
[ext_resource path="res://src/Actors/Props/RideArmor/RepeatAnimation.gd" type="Script" id=11]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=12]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/Idle.gd" type="Script" id=13]
[ext_resource path="res://src/Effects/Materials/down_mat.tres" type="Material" id=14]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/DamageReflector.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/secret2_p2f.res" type="SpriteFrames" id=16]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/secret2_p2.res" type="SpriteFrames" id=17]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/secret2_p1f.res" type="SpriteFrames" id=18]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/secret2_p1.res" type="SpriteFrames" id=19]
[ext_resource path="res://src/Sounds/FX - Secret2Start.wav" type="AudioStream" id=20]
[ext_resource path="res://src/Actors/NewStateMachine/NewSongPlayer.gd" type="Script" id=21]
[ext_resource path="res://src/Sounds/OST - SecretBattle2 - Intro.ogg" type="AudioStream" id=22]
[ext_resource path="res://src/Sounds/OST - SecretBattle2 - Loop.ogg" type="AudioStream" id=23]
[ext_resource path="res://src/HUD/Secret_bar_2.png" type="Texture" id=24]
[ext_resource path="res://src/DialogSystem/Dialogs/Stages/Secret2_Def_Dialogue.tres" type="Resource" id=25]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/VeilManager.gd" type="Script" id=26]
[ext_resource path="res://src/Effects/Materials/up_mat.tres" type="Material" id=27]
[ext_resource path="res://src/Actors/Bosses/GigaboltManowar/Space.gd" type="Script" id=28]
[ext_resource path="res://src/Sounds/SecretBoss2 - Teleport.wav" type="AudioStream" id=29]
[ext_resource path="res://src/AchievementSystem/Achievements/SECRET2DEFEATED.tres" type="Resource" id=30]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/HolyDance.gd" type="Script" id=31]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/CounterBall.tscn" type="PackedScene" id=32]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/HolyCurse.gd" type="Script" id=33]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/SmokeCreator.gd" type="Script" id=34]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/ExplosiveSmoke.tscn" type="PackedScene" id=35]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/HolySpikes.gd" type="Script" id=36]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/HolySpike.tscn" type="PackedScene" id=37]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=38]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/HolyBeam.gd" type="Script" id=39]
[ext_resource path="res://src/Actors/Bosses/SatanSigma/SigmaLaser.tscn" type="PackedScene" id=40]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/dps_hud.gd" type="Script" id=41]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=42]
[ext_resource path="res://src/Sounds/Sigma - Laser.wav" type="AudioStream" id=43]
[ext_resource path="res://src/Actors/Bosses/SatanSigma/flash.gd" type="Script" id=44]
[ext_resource path="res://src/Levels/PitchBlack/light.png" type="Texture" id=45]
[ext_resource path="res://src/Effects/Textures/windspark.png" type="Texture" id=46]
[ext_resource path="res://SpriteEffect.gd" type="Script" id=47]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/PandaAchievementHandler.gd" type="Script" id=48]
[ext_resource path="res://src/Effects/Textures/smoke.png" type="Texture" id=49]
[ext_resource path="res://src/Effects/Textures/blue_explosion.png" type="Texture" id=50]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/SecretDeath.gd" type="Script" id=51]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/HolyDeath.tscn" type="PackedScene" id=53]
[ext_resource path="res://src/Effects/Textures/circle.png" type="Texture" id=54]
[ext_resource path="res://src/Sounds/OST - SecretDesperation2 - Loop.ogg" type="AudioStream" id=55]
[ext_resource path="res://src/Sounds/OST - SecretDesperation - Intro.ogg" type="AudioStream" id=56]
[ext_resource path="res://src/Actors/Bosses/SatanSigma/charge_circle.gd" type="Script" id=57]
[ext_resource path="res://src/Effects/Textures/vertical_golden_particle.png" type="Texture" id=58]
[ext_resource path="res://src/Effects/Materials/secret_golden_particles.tres" type="Material" id=59]
[ext_resource path="res://src/Effects/Materials/golden_particles_2.tres" type="Material" id=60]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/VerticalFlash.tscn" type="PackedScene" id=61]

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 10, 21.5 )

[sub_resource type="RectangleShape2D" id=64]
extents = Vector2( 10, 21.5 )

[sub_resource type="CanvasItemMaterial" id=65]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="Curve" id=47]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 47 )

[sub_resource type="ParticlesMaterial" id=69]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 40.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 9 )

[sub_resource type="CanvasItemMaterial" id=66]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = true

[sub_resource type="Curve" id=4]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=70]
resource_name = "boss_smoke"
emission_shape = 1
emission_sphere_radius = 32.0
flag_disable_z = true
direction = Vector3( -1, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
orbit_velocity = -0.04
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 7 )

[sub_resource type="VisualShaderNodeTexture" id=15]
source = 2

[sub_resource type="VisualShaderNodeVectorOp" id=16]

[sub_resource type="VisualShaderNodeScalarUniform" id=17]
uniform_name = "Color"

[sub_resource type="VisualShaderNodeScalarOp" id=18]
operator = 2

[sub_resource type="VisualShaderNodeScalarUniform" id=19]
uniform_name = "Alpha"

[sub_resource type="VisualShader" id=20]
code = "shader_type canvas_item;
render_mode blend_add;

uniform float Color;
uniform float Alpha;



void vertex() {
// Output:0

}

void fragment() {
// ScalarUniform:4
	float n_out4p0 = Color;

// Texture:2
	vec3 n_out2p0;
	float n_out2p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out2p0 = _tex_read.rgb;
		n_out2p1 = _tex_read.a;
	}

// VectorOp:3
	vec3 n_out3p0 = vec3(n_out4p0) + n_out2p0;

// ScalarUniform:6
	float n_out6p0 = Alpha;

// ScalarOp:5
	float n_out5p0 = n_out2p1 * n_out6p0;

// Output:0
	COLOR.rgb = n_out3p0;
	COLOR.a = n_out5p0;

}

void light() {
// Output:0

}
"
mode = 1
modes/blend = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 15 )
nodes/fragment/2/position = Vector2( -60, 120 )
nodes/fragment/3/node = SubResource( 16 )
nodes/fragment/3/position = Vector2( 180, 60 )
nodes/fragment/4/node = SubResource( 17 )
nodes/fragment/4/position = Vector2( -60, 20 )
nodes/fragment/5/node = SubResource( 18 )
nodes/fragment/5/position = Vector2( 200, 200 )
nodes/fragment/6/node = SubResource( 19 )
nodes/fragment/6/position = Vector2( -100, 300 )
nodes/fragment/connections = PoolIntArray( 2, 0, 3, 1, 3, 0, 0, 0, 4, 0, 3, 0, 6, 0, 5, 1, 2, 1, 5, 0, 5, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=67]
shader = SubResource( 20 )
shader_param/Color = 0.0
shader_param/Alpha = 0.0

[sub_resource type="CanvasItemMaterial" id=68]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/shieldbreak.png-ed44e6f1b68c2acb67d339424599e27b.stex"

[sub_resource type="AtlasTexture" id=2]
atlas = SubResource( 1 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=3]
atlas = SubResource( 1 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=71]
atlas = SubResource( 1 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=5]
atlas = SubResource( 1 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=6]
atlas = SubResource( 1 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=72]
atlas = SubResource( 1 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=8]
atlas = SubResource( 1 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=73]
atlas = SubResource( 1 )
region = Rect2( 576, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=10]
atlas = SubResource( 1 )
region = Rect2( 0, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=11]
atlas = SubResource( 1 )
region = Rect2( 192, 384, 192, 192 )

[sub_resource type="SpriteFrames" id=74]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 71 ), SubResource( 5 ), SubResource( 6 ), SubResource( 72 ), SubResource( 8 ), SubResource( 73 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 38.0
} ]

[node name="Secret2" type="KinematicBody2D" groups=["Bosses"]]
z_index = 4
collision_layer = 0
script = ExtResource( 6 )
max_health = 160.0

[node name="Space" type="Node" parent="."]
script = ExtResource( 28 )
wall_check = 1
border_distance = 24
low_height_segments = 3

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 1 )
time_between_attacks = Vector2( 5, 5 )
play_desperation_music = false
desperation_chance = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1.5 )
shape = SubResource( 63 )

[node name="overlay" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
z_index = 3
frames = ExtResource( 2 )
animation = "overlay"
playing = true

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 12 )
z_index = 1
frames = ExtResource( 2 )
animation = "diagattack_loop"
frame = 1
playing = true
flip_h = true

[node name="up" type="AnimatedSprite" parent="animatedSprite"]
material = ExtResource( 27 )
z_index = 2
frames = ExtResource( 18 )
animation = "idle"
flip_h = true
script = ExtResource( 11 )
reference = NodePath("..")

[node name="back" type="AnimatedSprite" parent="animatedSprite/up"]
material = ExtResource( 27 )
z_index = -6
frames = ExtResource( 19 )
animation = "idle"
flip_h = true
script = ExtResource( 11 )
reference = NodePath("../..")

[node name="down" type="AnimatedSprite" parent="animatedSprite"]
material = ExtResource( 14 )
z_index = 2
frames = ExtResource( 16 )
animation = "idle"
flip_h = true
script = ExtResource( 11 )
reference = NodePath("..")

[node name="back" type="AnimatedSprite" parent="animatedSprite/down"]
material = ExtResource( 14 )
z_index = -6
frames = ExtResource( 17 )
animation = "idle"
flip_h = true
script = ExtResource( 11 )
reference = NodePath("../..")

[node name="VeilManager" type="Node" parent="animatedSprite"]
script = ExtResource( 26 )

[node name="SigmaLaser" parent="animatedSprite" instance=ExtResource( 40 )]
visible = false
position = Vector2( 15, -4 )
scale = Vector2( -1, 1 )
z_index = 35

[node name="SigmaLaser2" parent="animatedSprite" instance=ExtResource( 40 )]
visible = false
position = Vector2( 13, -15 )
rotation = -0.698132
scale = Vector2( -1, 1 )
z_index = 35

[node name="area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, 2.5 )
shape = SubResource( 64 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="Intro" type="Node2D" parent="."]
script = ExtResource( 8 )
debug_logs = true
dialogue = ExtResource( 10 )
bar = ExtResource( 24 )

[node name="song" type="AudioStreamPlayer" parent="Intro"]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -14.0
bus = "Music"

[node name="effect" type="AudioStreamPlayer" parent="Intro"]
pause_mode = 2
stream = ExtResource( 20 )
volume_db = -6.0
bus = "Music"

[node name="BattleSong" type="AudioStreamPlayer" parent="Intro"]
pause_mode = 2
stream = ExtResource( 22 )
volume_db = -10.0
bus = "Music"
script = ExtResource( 21 )

[node name="loop" type="AudioStreamPlayer" parent="Intro/BattleSong"]
pause_mode = 2
stream = ExtResource( 23 )
bus = "Music"

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 13 )
conflicting_moves = [ "Anything" ]
animation = "idle"

[node name="disappear" type="AudioStreamPlayer2D" parent="Idle"]
pause_mode = 2
stream = ExtResource( 29 )
volume_db = -9.0
max_distance = 600.0
bus = "SFX"

[node name="HolyDance" type="Node2D" parent="."]
script = ExtResource( 31 )
animation = "spin_prepare"
projectile = ExtResource( 32 )

[node name="HolyCurse" type="Node2D" parent="."]
script = ExtResource( 33 )
animation = "swipe_prepare"

[node name="SmokeCreator" type="Node" parent="HolyCurse"]
script = ExtResource( 34 )
smoke = ExtResource( 35 )

[node name="HolySpikes" type="Node2D" parent="."]
script = ExtResource( 36 )
animation = "ground_prepare"
spike = ExtResource( 37 )

[node name="HolyBeam" type="Node2D" parent="."]
script = ExtResource( 39 )

[node name="shot" type="AudioStreamPlayer2D" parent="HolyBeam"]
stream = ExtResource( 43 )
volume_db = -11.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 42 )

[node name="flash" type="Sprite" parent="HolyBeam"]
pause_mode = 2
visible = false
modulate = Color( 0.560784, 0.984314, 0.533333, 1 )
scale = Vector2( 10, 5 )
z_index = -1
texture = ExtResource( 45 )
script = ExtResource( 44 )
initial_alpha = 1.0
initial_scale = 15.0
final_color = Color( 0.0588235, 0.501961, 0.356863, 1 )
duration = 0.1

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 4 )
invulnerability_time = 0.1
ignore_nearby_hits = false
disable_on_death = false
max_flash_time = 0.35
activate_after_intro = false

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 38 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"

[node name="dps" type="RichTextLabel" parent="Damage"]
visible = false
margin_left = -18.0
margin_top = -69.0
margin_right = 59.0
margin_bottom = -52.0
text = "0.0"
script = ExtResource( 41 )

[node name="area2D" type="Area2D" parent="Damage"]
visible = false
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="Damage/area2D"]
position = Vector2( 0, 2.5 )
shape = SubResource( 64 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 7 )
damage = 12.0
disable_on_death = false

[node name="DamageReflector" parent="." instance=ExtResource( 15 )]

[node name="BossDeath" type="Node2D" parent="."]
script = ExtResource( 51 )
_holy_death = ExtResource( 53 )
dialogue = ExtResource( 25 )

[node name="explosion_particles" type="Particles2D" parent="BossDeath"]
material = SubResource( 65 )
position = Vector2( 0, 0.5 )
z_index = 12
emitting = false
amount = 24
lifetime = 2.0
local_coords = false
process_material = SubResource( 69 )
texture = ExtResource( 50 )

[node name="smoke" type="Particles2D" parent="BossDeath"]
material = SubResource( 66 )
z_index = 6
emitting = false
amount = 32
lifetime = 0.75
process_material = SubResource( 70 )
texture = ExtResource( 49 )

[node name="final_explosion" type="AudioStreamPlayer2D" parent="BossDeath"]
stream = ExtResource( 3 )
volume_db = -2.0
max_distance = 900.0
bus = "SFX"

[node name="fullscreen_light" type="Sprite" parent="BossDeath"]
visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 50, 40 )
z_index = 100
texture = ExtResource( 45 )

[node name="background_light" type="Sprite" parent="BossDeath"]
material = SubResource( 67 )
position = Vector2( 5.99998, 7.49999 )
scale = Vector2( 100, 40 )
z_index = -2
texture = ExtResource( 5 )

[node name="flash" type="Sprite" parent="BossDeath"]
pause_mode = 2
visible = false
modulate = Color( 0.560784, 0.984314, 0.533333, 1 )
scale = Vector2( 10, 5 )
z_index = -31
texture = ExtResource( 45 )
script = ExtResource( 44 )
initial_alpha = 1.0
tween_scale_y = false
final_color = Color( 1, 1, 1, 1 )
duration = 0.064

[node name="flash2" type="Sprite" parent="BossDeath"]
pause_mode = 2
visible = false
modulate = Color( 0.560784, 0.984314, 0.533333, 1 )
scale = Vector2( 10, 5 )
z_index = -31
texture = ExtResource( 45 )
script = ExtResource( 44 )
initial_alpha = 1.0
tween_scale_y = false
initial_color = Color( 1, 0.407843, 0.407843, 1 )
final_color = Color( 1, 0, 0, 1 )
duration = 0.064

[node name="Desperation" type="AudioStreamPlayer" parent="BossDeath"]
pause_mode = 2
stream = ExtResource( 56 )
volume_db = -8.0
bus = "Music"
script = ExtResource( 21 )

[node name="loop" type="AudioStreamPlayer" parent="BossDeath/Desperation"]
pause_mode = 2
stream = ExtResource( 55 )
bus = "Music"

[node name="windspark" type="Sprite" parent="BossDeath"]
visible = false
modulate = Color( 1, 0, 0, 0.45098 )
position = Vector2( -16, 21 )
z_index = 45
texture = ExtResource( 46 )
hframes = 2
vframes = 5
script = ExtResource( 47 )
animation_speed = 24.0
one_shot = true

[node name="vfx" type="Sprite" parent="BossDeath"]
visible = false
scale = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 54 )
script = ExtResource( 57 )
initial_scale = Vector2( 8, 6 )
final_color = Color( 0.858824, 1, 0.176471, 0.694118 )
interval = 0.41
total_duration = 0.4

[node name="golden_particles" type="Particles2D" parent="BossDeath"]
pause_mode = 1
material = SubResource( 68 )
position = Vector2( 0, 1 )
emitting = false
amount = 24
lifetime = 0.2
randomness = 0.3
local_coords = false
process_material = ExtResource( 59 )
texture = ExtResource( 58 )

[node name="golden_particles2" type="Particles2D" parent="BossDeath"]
pause_mode = 1
material = SubResource( 68 )
position = Vector2( 0, 1 )
z_index = 1
emitting = false
lifetime = 0.2
randomness = 0.3
local_coords = false
process_material = ExtResource( 60 )
texture = ExtResource( 58 )

[node name="VerticalFlash" parent="BossDeath" instance=ExtResource( 61 )]
visible = false
modulate = Color( 0.780392, 0, 0, 0.666667 )

[node name="break_vfx" type="AnimatedSprite" parent="BossDeath"]
pause_mode = 2
visible = false
position = Vector2( -1, 3 )
z_index = 25
frames = SubResource( 74 )

[node name="AchievementHandler" type="Node" parent="."]
script = ExtResource( 48 )
defeated_any = false
defeated = ExtResource( 30 )

[connection signal="ability_start" from="Intro" to="Idle" method="_on_Intro_ability_start"]
[connection signal="dps" from="Damage" to="Damage/dps" method="_on_Damage_dps"]
[connection signal="deflected" from="DamageReflector" to="animatedSprite/VeilManager" method="_on_deflected"]
[connection signal="resetted" from="DamageReflector" to="animatedSprite/VeilManager" method="_on_resetted"]
[connection signal="started_deflect" from="DamageReflector" to="animatedSprite/VeilManager" method="_on_started_deflect"]
[connection signal="vanished" from="DamageReflector" to="animatedSprite/VeilManager" method="_on_vanished"]
[connection signal="true_death" from="BossDeath" to="animatedSprite/VeilManager" method="_on_vanished"]
